# Yutils

./: .clangd  .gitignore  CMakeLists.txt  README.md  ruff.toml  test.csv
.cache/clangd/index/: ArgParser.cpp.9FBD26529ACDB93B.idx  ArgParser.hpp.06AACE96B52A1228.idx  ArgParserExample.cpp.787A9DDAA96794E3.idx  Color.hpp.F53B3E65226B574E.idx  Common.hpp.68E786B2B6645300.idx  Logger.hpp.C02461D66F4ADC61.idx  LoggerExample.cpp.90476C7295C4E77E.idx  Serializer.hpp.90D50824A63951F8.idx  SerializerExample.cpp.1F8CFF3B4AF6508E.idx  SimpleCSV.cpp.49ED2F9517A86C16.idx  SimpleCSV.hpp.41DBAF07C8ABAD3C.idx  SimpleCSVExample.cpp.00A6DBD880CADE8B.idx  System.hpp.35D03CC7F6AFA8F4.idx  _InnerLogger.hpp.E3526DB51A222884.idx
.github/workflows/: auto-format.yml  build-and-test.yml  ci-auto-format-and-commit.yml  ci-build-and-test.yml  ci-build-test-and-format-for-pr.yml  clang-format-check.yml  cmake-multi-platform.yml  normal-ci-for-main.yml
cmake/: Arguments.cmake  Compiler.cmake  InstallLibraries.cmake  Logger.cmake  Logging.cmake  arguments.cmake  cmake-parameters.md  compiler.cmake  lib-install.cmake
cmake/compilers/: cuda-compiler-configs.cmake  cxx-compiler-configs.cmake
cmake/config.cmake.in/: YutilsConfig.cmake.in
cmake/libraries/: libcuda.cmake  libpython.cmake  libspdlog.cmake  libtorch.cmake
cmake/utils/: lib-install.cmake  logging.cmake  run-python.cmake
docs/: cmake-rules.md
examples/: ArgParserExample.cpp  CMakeLists.txt  FactoryExample.cpp  LoggerExample.cpp  RandomExample.cpp  SerializerExample.cpp  SimpleCSVExample.cpp  ThreadPoolExample.cpp
include/Yutils/: ArgParser.hpp  Color.hpp  Common.hpp  Concepts.hpp  Factory.hpp  InnerLogger.hpp  Logger.hpp  PreDefined.hpp  Random.hpp  Serializer.hpp  SimpleCSV.hpp  SimpleWriter.hpp  System.hpp  ThreadPool.hpp  TimeCounter.hpp  TypeTraits.hpp  _InnerLogger.hpp  yRandom.hpp
lib/: CMakeLists.txt
scripts/: build-and-install-spdlog.sh  build-yutils.sh  build.ps1  build.sh  format.sh  install-spdlog.sh  install.sh  windows-prune-PATH.sh
src/: ArgParser.cpp  CMakeLists.txt  SimpleWriter.cpp
src/Yutils/: ArgParser.cpp  SimpleCSV.cpp
tests/: CMakeLists.txt  main.cpp
